@@ -2523,6 +2523,7 @@ SCIP_RETCODE propagateBounds(
 {
    SCIP_CONSDATA* consdata;
    SCIP_INTERVAL  lhsrange;
+   SCIP_INTERVAL  lhsrange_squared;
    SCIP_INTERVAL* lhsranges;
    SCIP_INTERVAL  rhsrange;
    SCIP_INTERVAL  a, b, c;
@@ -2539,6 +2540,7 @@ SCIP_RETCODE propagateBounds(
 
    consdata = SCIPconsGetData(cons);
    assert(consdata != NULL);
+   assert(consdata->constant >= 0.0);
 
    *redundant = FALSE;
 
@@ -2574,8 +2576,11 @@ SCIP_RETCODE propagateBounds(
 
       SCIPintervalAdd(SCIPinfinity(scip), &lhsrange, lhsrange, lhsranges[i]);
    }
+   assert(lhsrange.inf >= 0);  /* a sum of squares plus positive constant should be non-negative */
+   lhsrange_squared = lhsrange;  /* we will need the squared version later */
+   SCIPintervalSquareRoot(SCIPinfinity(scip), &lhsrange, lhsrange);
 
-   /* compute activity on rhs: rhsrange = sqr(rhscoeff * (rhsvar + rhsoffset) ) */
+   /* compute activity on rhs: rhsrange = rhscoeff * (rhsvar + rhsoffset) */
    lb = SCIPcomputeVarLbLocal(scip, consdata->rhsvar) - SCIPepsilon(scip);
    ub = SCIPcomputeVarUbLocal(scip, consdata->rhsvar) + SCIPepsilon(scip);
    SCIPintervalSetBounds(&rhsrange, MIN(lb, ub), MAX(lb, ub));
@@ -2584,7 +2589,6 @@ SCIP_RETCODE propagateBounds(
       SCIPintervalAddScalar(SCIPinfinity(scip), &rhsrange, rhsrange, consdata->rhsoffset);
    if( consdata->rhscoeff  != 1.0 )
       SCIPintervalMulScalar(SCIPinfinity(scip), &rhsrange, rhsrange, consdata->rhscoeff);
-   SCIPintervalSquare(SCIPinfinity(scip), &rhsrange, rhsrange);
 
    /* check for infeasibility */
    if( SCIPisGT(scip, lhsrange.inf-SCIPfeastol(scip), rhsrange.sup) )
@@ -2607,12 +2611,24 @@ SCIP_RETCODE propagateBounds(
    /* try to tighten variable on rhs */
    if( SCIPvarGetStatus(consdata->rhsvar) != SCIP_VARSTATUS_MULTAGGR )
    {
-      SCIPintervalSquareRoot(SCIPinfinity(scip), &a, lhsrange);
+      /* we have lhsrange <= rhscoeff * (rhsvar + rhsoffset)
+       * if rhscoeff > 0, then lhsrange / rhscoeff - rhsoffset <= rhsvar
+       * if rhscoeff < 0, then lhsrange / rhscoeff - rhsoffset >= rhsvar
+       */
+      a = lhsrange;
       if( consdata->rhscoeff != 1.0 )
          SCIPintervalDivScalar(SCIPinfinity(scip), &a, a, consdata->rhscoeff);
       if( consdata->rhsoffset != 0.0 )
          SCIPintervalSubScalar(SCIPinfinity(scip), &a, a, consdata->rhsoffset);
-      SCIP_CALL( SCIPtightenVarLb(scip, consdata->rhsvar, SCIPintervalGetInf(a), FALSE, &infeas, &tightened) );
+
+      if( consdata->rhscoeff > 0.0 )
+      {
+         SCIP_CALL( SCIPtightenVarLb(scip, consdata->rhsvar, SCIPintervalGetInf(a), FALSE, &infeas, &tightened) );
+      }
+      else
+      {
+         SCIP_CALL( SCIPtightenVarUb(scip, consdata->rhsvar, SCIPintervalGetSup(a), FALSE, &infeas, &tightened) );
+      }
       if( infeas )
       {
          SCIPdebugMsg(scip, "propagation found constraint <%s> infeasible\n", SCIPconsGetName(cons));
@@ -2627,8 +2643,20 @@ SCIP_RETCODE propagateBounds(
       }
    }
 
-   /* try to tighten variables on lhs */
-   SCIPintervalSub(SCIPinfinity(scip), &b, rhsrange, lhsrange);  /*lint !e644 */
+   /* try to tighten variables on lhs:
+    * (coefs[i] * (vars[i] + offset[i]))^2 <= sqr(rhsrange) - (constant + sum_{j != i} (coefs[j] * (vars[j] + offset[j]))^2)
+    *
+    * first, set b = sqr(rhsrange) - (constant + sum_i (coefs[i] * (vars[i] + offset[i]))^2)
+    * then, for each i, we undo the subtraction of (coefs[i] * (vars[i] + offset[i]))^2 in b and take a square root
+    *   thus, we get a = sqrt(sqr(rhsrange) - (constant + sum_{j != i} (coefs[j] * (vars[j] + offset[j]))^2))
+    *   and |coefs[i] * (vars[i] + offset[i])| <= a
+    * this gives us the two inequalities
+    *   vars[i] <=  sqrt(b)/coefs[i] - offset[i]
+    *   vars[i] >= -sqrt(b)/coefs[i] - offset[i]
+    * (note that coefs[i] >= 0)
+    */
+   SCIPintervalSquare(SCIPinfinity(scip), &b, rhsrange);
+   SCIPintervalSub(SCIPinfinity(scip), &b, b, lhsrange_squared);  /*lint !e644 */
    for( i = 0; i < consdata->nvars; ++i )
    {
       if( SCIPvarGetStatus(consdata->vars[i]) == SCIP_VARSTATUS_MULTAGGR )
