@@ -70,6 +70,7 @@ Fixed bugs
 - Fixed order of linker flags when building AMPL interface with cmake system.
 - Improved separation for SOC constraint with multiaggregated variable on right-hand-side.
 - Fixed bug in presol_boundshift: do not shift non-active variables
+- Fixed bug in domain propagation for SOC constraints with negative coefficient for variable on right-hand-side.
 
 Miscellaneous
 -------------
